# Messenger

./: .gitignore  CMakeLists.txt  README.md  TODO.cpp
encoder_decoder/: data.txt  decode  decoded_data.txt  decoder.cpp  encode  encoder.cpp  encoder_decoder.hpp  user.hpp
encoder_decoder/encoded_data/: encoded_data.txt
encoder_decoder/server_client/: main.cpp  myserver.cpp  myserver.h
inception/: check.cpp  global_variables.hpp  paint  paint.cpp  paint.hpp  personal_settings.cpp  personal_settings.hpp  readme  sign.cpp  sign.hpp  textbox.cpp  textbox.hpp  user.cpp  user.hpp
inception/encoder_decoder/: user.hpp
network/: class_names.py  classification.py  readme
